<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="activity_launcher_has_shown">activity_launcher_has_shown</string>
    <string name="ai_input_title">智能输入设置</string>
    <string name="asr_offline_download_way">asr_offline_download_way</string>
    <string name="asr_offline_model_download_status">asr_offline_model_download_status</string>
    <string name="asr_offline_model_download_tip_show">asr_offline_model_download_tip_show</string>
    <string name="asr_offline_model_path">asr_offline_model_path</string>
    <string name="asr_ppe_set">asr_ppe_set_v2</string>
    <string name="asr_switch_cell_tips_is_shown">asr_switch_cell_tips_is_shown</string>
    <string name="association_delay_refresh">association_delay_refresh_v2</string>
    <string name="association_refresh_timeout">association_refresh_timeout_v2</string>
    <string name="candidate_delay_refresh">candidate_delay_refresh_v2</string>
    <string name="candidate_font_size">candidate_font_size</string>
    <string name="cloud_candidate_refresh_timeout">cloud_candidate_refresh_timeout_v2</string>
    <string name="cloud_ppe_set">cloud_ppe_set_v2</string>
    <string name="cloud_use_partial_input_info">云端使用部分输入信息</string>
    <string name="cloud_use_partial_input_info_desc">在键盘与语音输入下提供更精准连贯的结果</string>
    <string name="cloud_use_personal_lexicon">云端使用个人词库</string>
    <string name="cloud_use_personal_lexicon_desc">在语音输入下提供更高效准确的结果</string>
    <string name="color_scheme">color_scheme</string>
    <string name="contacts_permission_summary">用于为你快速输入联系人姓名，仅在开启时访问并导入</string>
    <string name="contacts_permission_title">通讯录权限</string>
    <string name="emoji_recommend_enabled">emoji_recommend_enabled</string>
    <string name="enable_ai_chat_assistant_all">enable_ai_chat_assistant_all</string>
    <string name="enable_ai_chat_assistant_all_track_params">aichatswitchall</string>
    <string name="enable_ai_chat_assistant_qq">enable_ai_chat_assistant_qq</string>
    <string name="enable_ai_chat_assistant_qq_track_params">aichatswitchqq</string>
    <string name="enable_ai_chat_assistant_wechat">enable_ai_chat_assistant_wechat</string>
    <string name="enable_ai_chat_assistant_wechat_track_params">aichatswitchwechat</string>
    <string name="enable_alog_log">enable_alog_log</string>
    <string name="enable_bluetooth_input">enable_bluetooth_input</string>
    <string name="enable_clipboard_candidate_bar_show">enable_clipboard_candidate_bar_show</string>
    <string name="enable_clipboard_history">enable_clipboard_history</string>
    <string name="enable_close_llm_cache">enable_close_llm_cache</string>
    <string name="enable_cloud">enable_cloud</string>
    <string name="enable_cloud_track_params">cloudinputswitch</string>
    <string name="enable_cloud_use_partial_input">enable_cloud_use_partial_input</string>
    <string name="enable_cloud_use_personal_lexicon">enable_cloud_use_personal_lexicon</string>
    <string name="enable_double_click_space">enable_double_click_space</string>
    <string name="enable_double_click_space_track_params">doubleclickspaceswitch</string>
    <string name="enable_download_test_env_asr_mode">enable_download_test_env_asr_mode</string>
    <string name="enable_first_letter_capitalization">enable_first_letter_capitalization</string>
    <string name="enable_first_letter_capitalization_track_params">uppercaseswitch</string>
    <string name="enable_fuzzy">enable_fuzzy</string>
    <string name="enable_fuzzy_initial_consonant_c">kCEqualToCh</string>
    <string name="enable_fuzzy_initial_consonant_h">kFEqualToH</string>
    <string name="enable_fuzzy_initial_consonant_n">kLEqualToN</string>
    <string name="enable_fuzzy_initial_consonant_r">kREqualToL</string>
    <string name="enable_fuzzy_initial_consonant_s">kSEqualToSh</string>
    <string name="enable_fuzzy_initial_consonant_z">kZEqualToZh</string>
    <string name="enable_fuzzy_syllables_huang">kHuangEqualToWang</string>
    <string name="enable_fuzzy_syllables_hui">kHuiEqualToFei</string>
    <string name="enable_fuzzy_track_params">fuzzysoundswitch</string>
    <string name="enable_fuzzy_vowel_an">kAnEqualToAng</string>
    <string name="enable_fuzzy_vowel_en">kEnEqualToEng</string>
    <string name="enable_fuzzy_vowel_ian">kIanEqualToIang</string>
    <string name="enable_fuzzy_vowel_in">kInEqualToIng</string>
    <string name="enable_fuzzy_vowel_uan">kUanEqualToUang</string>
    <string name="enable_fuzzy_vowel_un">kUnEqualToOng</string>
    <string name="enable_global_context">enable_global_context_v2</string>
    <string name="enable_key_bubbles">enable_key_bubbles</string>
    <string name="enable_key_enter_send_msg">enable_key_enter_send_msg</string>
    <string name="enable_key_fusiyin">enable_key_fusiyin</string>
    <string name="enable_key_fusiyin_track_params">overlineswitch</string>
    <string name="enable_key_sound">enable_key_sound</string>
    <string name="enable_key_vibrate">enable_key_vibrate</string>
    <string name="enable_llm_color">enable_llm_color_v2</string>
    <string name="enable_nbest_mark">enable_nbest_mark_v2</string>
    <string name="enable_offline_asr">enable_offline_asr</string>
    <string name="enable_one_hand_input_mode">enable_one_hand_input_mode</string>
    <string name="enable_open_candidate_Info">enable_open_candidate_Info</string>
    <string name="enable_report_inputdata">enable_report_inputdata</string>
    <string name="enable_request_log">enable_request_log</string>
    <string name="enable_save_voice">enable_save_voice_v2</string>
    <string name="enable_switch_cell">enable_switch_cell</string>
    <string name="enable_update_contacts">enable_update_contacts</string>
    <string name="enable_update_contacts_track_params">contactswitch</string>
    <string name="follow_mode_refresh_one_ms">follow_mode_one_refresh</string>
    <string name="follow_mode_refresh_three_ms">follow_mode_three_refresh</string>
    <string name="follow_mode_refresh_two_ms">follow_mode_two_refresh</string>
    <string name="full_base_input_mode">full_base_input_mode</string>
    <string name="go_feedback">去反馈</string>
    <string name="guid_cloud_settings_commnents">开启后，将显著提升键盘输入时预测/联想与语音转文字输入准确率，且仅用于前述目的，不会存储你的输入信息。</string>
    <string name="guide_setting_activity_has_shown">guide_setting_activity_has_shown</string>
    <string name="guide_step1_has_completed">guide_step1_has_completed</string>
    <string name="hand_writing_has_shown_tips">hand_writing_has_shown_tips</string>
    <string name="hans_toast_shown">hans_toast_shown</string>
    <string name="hant_toast_shown">hant_toast_shown</string>
    <string name="input_mode">input_mode</string>
    <string name="is_click_ai_chat_icon">is_click_ai_chat_icon</string>
    <string name="is_complete_migrate_refresh_config">is_complete_migrate_refresh_config</string>
    <string name="is_enable_high_refresh_rate">is_enable_high_refresh_rate</string>
    <string name="is_hant_enabled">is_hant_enabled</string>
    <string name="is_set_clipboard_history">is_set_clipboard_history</string>
    <string name="kaomoji_recommend_enabled">kaomoji_recommend_enabled</string>
    <string name="key26_number_symbol_key_style">key26_number_symbol_key_style</string>
    <string name="key26_period_comma_style">key26_period_comma_style</string>
    <string name="key_custom_symbol_number_9_cache">key_custom_symbol_number_9_cache</string>
    <string name="key_custom_symbol_py_9_cache">key_custom_symbol_py_9_cache</string>
    <string name="key_double_spell_select">key_double_spell_select</string>
    <string name="key_feedback_repose_mode">key_feedback_repose_mode</string>
    <string name="key_feedback_repose_mode_is_change">key_feedback_repose_mode_is_change</string>
    <string name="key_sound_volume">key_sound_volume</string>
    <string name="key_vibrate_intensity">key_vibrate_intensity</string>
    <string name="keyboard_first_show_time">keyboard_first_show_time</string>
    <string name="keyboard_layout_settings_initialized">keyboard_layout_settings_initialized</string>
    <string name="lang_switch_key_position">lang_switch_key_position</string>
    <string name="last_chinese_input_mode">last_chinese_input_mode</string>
    <string name="last_one_hand_input_state">last_one_hand_input_state</string>
    <string name="microphone_permission_summary">用于语音输入</string>
    <string name="microphone_permission_title">麦克风权限</string>
    <string name="notification_permission_summary">用于告知功能更新消息以及相关活动信息</string>
    <string name="notification_permission_title">推送通知</string>
    <string name="pinyin_location_style">pinyin_location_style</string>
    <string name="privacy_statement_pop_has_shown">privacy_statement_pop_has_shown</string>
    <string name="quality_mode_refresh_one_ms">quality_mode_one_refresh</string>
    <string name="quality_mode_refresh_three_ms">quality_mode_three_refresh</string>
    <string name="quality_mode_refresh_two_ms">quality_mode_two_refresh</string>
    <string name="read_contacts_system_pop_have_shown">read_contacts_system_pop_have_shown</string>
    <string name="read_sms_permission">读取短信</string>
    <string name="read_sms_permission_info">用于本地提取短信中的验证码，实现验证码填充</string>
    <string name="read_sms_system_pop_have_shown">read_sms_system_pop_have_shown</string>
    <string name="sms_verification_enabled">sms_verification_enabled</string>
    <string name="system_permission_title">系统权限设置</string>
    <string name="temporary_did">temporary_did</string>
    <string name="toolbar_speech_show_type">toolbar_speech_show_type_v2</string>
    <string name="typing_associate_enabled">typing_associate_enabled</string>
    <string name="upload_feedback_enable_context_title">上下文内容</string>
    <string name="upload_feedback_voice_recognition_result_title">识别结果</string>
    <string name="upload_feedback_voice_recognition_time">语音开始时间</string>
    <string name="vad_setting_ms">vad_setting_ms_v2</string>
    <string name="voice_input_action_enable">voice_input_action_enable</string>
    <string name="voice_input_action_send_default">voice_input_action_send_default</string>
    <string name="voice_input_action_send_list">voice_input_action_send_list</string>
    <string name="voice_input_action_send_type">voice_input_action_send_type</string>
    <string name="voice_input_number_show_setting">voice_input_number_show_setting</string>
    <string name="voice_input_punctuation_setting">voice_input_punctuation_setting</string>
    <string name="voice_input_words_model_setting">voice_input_words_model_setting</string>
</resources>