<?xml version="1.0" encoding="utf-8"?>
<SettingsPreference xmlns:app="http://schemas.app.com/apk/res-auto">
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_fuzzy"
        app:notifyReload="true"
        app:trackParams="@string/enable_fuzzy_track_params"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_fuzzy_initial_consonant_z"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_fuzzy_initial_consonant_c"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_fuzzy_initial_consonant_s"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_fuzzy_initial_consonant_n"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_fuzzy_initial_consonant_h"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_fuzzy_initial_consonant_r"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_fuzzy_vowel_an"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_fuzzy_vowel_en"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_fuzzy_vowel_in"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_fuzzy_vowel_ian"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_fuzzy_vowel_uan"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_fuzzy_vowel_un"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_fuzzy_syllables_hui"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_fuzzy_syllables_huang"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_cloud"
        app:notifyReload="true"
        app:trackParams="@string/enable_cloud_track_params"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_first_letter_capitalization"
        app:notifyReload="true"
        app:trackParams="@string/enable_first_letter_capitalization_track_params"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_double_click_space"
        app:notifyReload="true"
        app:trackParams="@string/enable_double_click_space_track_params"/>
    <IntPreference
        app:defaultValue="-1"
        app:key="@string/enable_ai_chat_assistant_all"
        app:notifyReload="true"
        app:trackParams="@string/enable_ai_chat_assistant_all_track_params"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_ai_chat_assistant_wechat"
        app:notifyReload="true"
        app:trackParams="@string/enable_ai_chat_assistant_wechat_track_params"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_ai_chat_assistant_qq"
        app:notifyReload="true"
        app:trackParams="@string/enable_ai_chat_assistant_qq_track_params"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_key_fusiyin"
        app:notifyReload="true"
        app:trackParams="@string/enable_key_fusiyin_track_params"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_key_enter_send_msg"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_key_bubbles"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_offline_asr"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_switch_cell"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_cloud_use_partial_input"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_cloud_use_personal_lexicon"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_clipboard_candidate_bar_show"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_clipboard_history"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/is_set_clipboard_history"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_bluetooth_input"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_update_contacts"
        app:notifyReload="true"
        app:trackParams="@string/enable_update_contacts_track_params"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/input_mode"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/last_chinese_input_mode"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/color_scheme"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/voice_input_punctuation_setting"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="1"
        app:key="@string/voice_input_number_show_setting"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue="normal"
        app:key="@string/voice_input_words_model_setting"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/voice_input_action_enable"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue="帮我发送"
        app:key="@string/voice_input_action_send_type"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue="帮我发送,我说完了,立即发送,发送发送,overover"
        app:key="@string/voice_input_action_send_list"
        app:notifyReload="false"/>
    <StringPreference
        app:defaultValue="帮我发送"
        app:key="@string/voice_input_action_send_default"
        app:notifyReload="false"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_report_inputdata"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_key_sound"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="50"
        app:key="@string/key_sound_volume"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_key_vibrate"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue="NONE"
        app:defaultValuePacific="STRONG"
        app:key="@string/key_vibrate_intensity"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="1"
        app:defaultValueThirdVersion="0"
        app:key="@string/full_base_input_mode"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="1"
        app:key="@string/key_feedback_repose_mode"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/key_feedback_repose_mode_is_change"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_one_hand_input_mode"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="-1"
        app:key="@string/last_one_hand_input_state"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/is_click_ai_chat_icon"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_llm_color"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_alog_log"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_nbest_mark"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/upload_feedback_enable_context_title"
        app:notifyReload="false"/>
    <IntPreference
        app:defaultValue="800"
        app:key="@string/vad_setting_ms"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_save_voice"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_request_log"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_close_llm_cache"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_open_candidate_Info"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/enable_global_context"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/enable_download_test_env_asr_mode"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/sms_verification_enabled"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/read_sms_system_pop_have_shown"
        app:notifyReload="false"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/typing_associate_enabled"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/emoji_recommend_enabled"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/kaomoji_recommend_enabled"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/read_contacts_system_pop_have_shown"
        app:notifyReload="false"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/privacy_statement_pop_has_shown"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/is_complete_migrate_refresh_config"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue=""
        app:key="@string/asr_ppe_set"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue=""
        app:key="@string/cloud_ppe_set"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="50"
        app:key="@string/candidate_delay_refresh"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="200"
        app:key="@string/cloud_candidate_refresh_timeout"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="200"
        app:key="@string/association_delay_refresh"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="500"
        app:key="@string/association_refresh_timeout"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/toolbar_speech_show_type"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="50"
        app:key="@string/follow_mode_refresh_one_ms"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="200"
        app:key="@string/follow_mode_refresh_two_ms"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="500"
        app:key="@string/follow_mode_refresh_three_ms"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="100"
        app:key="@string/quality_mode_refresh_one_ms"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="200"
        app:key="@string/quality_mode_refresh_two_ms"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="500"
        app:key="@string/quality_mode_refresh_three_ms"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/key26_number_symbol_key_style"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/pinyin_location_style"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="1"
        app:key="@string/lang_switch_key_position"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/keyboard_layout_settings_initialized"
        app:notifyReload="false"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/key26_period_comma_style"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/asr_offline_download_way"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue=""
        app:key="@string/asr_offline_model_path"
        app:notifyReload="false"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/is_enable_high_refresh_rate"
        app:notifyReload="true"/>
    <IntPreference
        app:defaultValue="0"
        app:key="@string/asr_offline_model_download_status"
        app:notifyReload="false"/>
    <BooleanPreference
        app:defaultValue="true"
        app:key="@string/asr_offline_model_download_tip_show"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/guide_step1_has_completed"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/guide_setting_activity_has_shown"
        app:notifyReload="false"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/activity_launcher_has_shown"
        app:notifyReload="false"/>
    <IntPreference
        app:defaultValue="19"
        app:key="@string/candidate_font_size"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue=""
        app:key="@string/temporary_did"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue=""
        app:key="@string/key_custom_symbol_py_9_cache"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue=""
        app:key="@string/key_custom_symbol_number_9_cache"
        app:notifyReload="true"/>
    <StringPreference
        app:defaultValue="DEFAULT"
        app:key="@string/key_double_spell_select"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/is_hant_enabled"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/hand_writing_has_shown_tips"
        app:notifyReload="true"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/hant_toast_shown"
        app:notifyReload="false"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/hans_toast_shown"
        app:notifyReload="false"/>
    <BooleanPreference
        app:defaultValue="false"
        app:key="@string/asr_switch_cell_tips_is_shown"
        app:notifyReload="false"/>
    <LongPreference
        app:defaultValue="0"
        app:key="@string/keyboard_first_show_time"
        app:notifyReload="true"/>
</SettingsPreference>
