<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/ime_color_setting_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.bytedance.common_biz.ui.widget.ImeTitleBar
        android:id="@+id/settings_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ime_dp_56"
        app:ime_back_arrow_icon="@drawable/ic_arrow_left"
        app:ime_title_text="@string/system_permission_title"/>
    <com.bytedance.common_biz.ui.widget.ImeListItemView
        android:gravity="center_vertical"
        android:id="@+id/read_sms_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ime_dp_12"
        android:layout_marginHorizontal="@dimen/ime_dp_20"
        app:accessoryType="arrow_with_text"
        app:auto_height="true"
        app:containerBackgroundColor="@color/ime_color_setting_item_bg"
        app:containerCornerRadius="@dimen/ime_dp_15"
        app:descriptionText="@string/read_sms_permission_info"
        app:titleText="@string/read_sms_permission"/>
    <com.bytedance.common_biz.ui.widget.ImeListItemView
        android:gravity="center_vertical"
        android:id="@+id/contacts_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ime_dp_6"
        android:layout_marginHorizontal="@dimen/ime_dp_20"
        app:accessoryType="arrow_with_text"
        app:auto_height="true"
        app:containerBackgroundColor="@color/ime_color_setting_item_bg"
        app:containerCornerRadius="@dimen/ime_dp_15"
        app:descriptionText="@string/contacts_permission_summary"
        app:titleText="@string/contacts_permission_title"/>
    <com.bytedance.common_biz.ui.widget.ImeListItemView
        android:gravity="center_vertical"
        android:id="@+id/microphone_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ime_dp_6"
        android:layout_marginHorizontal="@dimen/ime_dp_20"
        app:accessoryType="arrow_with_text"
        app:auto_height="true"
        app:containerBackgroundColor="@color/ime_color_setting_item_bg"
        app:containerCornerRadius="@dimen/ime_dp_15"
        app:descriptionText="@string/microphone_permission_summary"
        app:titleText="@string/microphone_permission_title"/>
    <com.bytedance.common_biz.ui.widget.ImeListItemView
        android:gravity="center_vertical"
        android:id="@+id/notification_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ime_dp_6"
        android:layout_marginHorizontal="@dimen/ime_dp_20"
        app:accessoryType="arrow_with_text"
        app:auto_height="true"
        app:containerBackgroundColor="@color/ime_color_setting_item_bg"
        app:containerCornerRadius="@dimen/ime_dp_15"
        app:descriptionText="@string/notification_permission_summary"
        app:titleText="@string/notification_permission_title"/>
</LinearLayout>
