<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/ime_color_setting_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.bytedance.common_biz.ui.widget.ImeTitleBar
        android:id="@+id/settings_title_bar"
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ime_dp_56"
        app:ime_back_arrow_icon="@drawable/ic_arrow_left"
        app:ime_title_text="@string/ai_input_title"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ime_dp_12"
        android:paddingHorizontal="@dimen/ime_dp_20">
        <com.bytedance.common_biz.ui.widget.ImeListItemView
            android:gravity="center_vertical"
            android:id="@+id/cloud_use_partial_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:accessoryType="switch_button"
            app:auto_height="true"
            app:containerBackgroundColor="@color/ime_color_setting_item_bg"
            app:containerCornerRadius="@dimen/ime_dp_15"
            app:descriptionText="@string/cloud_use_partial_input_info_desc"
            app:titleText="@string/cloud_use_partial_input_info"/>
        <com.bytedance.common_biz.ui.widget.ImeListItemView
            android:gravity="center_vertical"
            android:id="@+id/cloud_use_personal_lexicon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ime_dp_6"
            app:accessoryType="switch_button"
            app:auto_height="true"
            app:containerBackgroundColor="@color/ime_color_setting_item_bg"
            app:containerCornerRadius="@dimen/ime_dp_15"
            app:descriptionText="@string/cloud_use_personal_lexicon_desc"
            app:titleText="@string/cloud_use_personal_lexicon"/>
        <TextView
            android:textSize="@dimen/ime_sp_12"
            android:textColor="@color/ime_color_black_80"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/guid_cloud_settings_commnents"
            android:textFontWeight="330"/>
    </LinearLayout>
</LinearLayout>
